@startuml
title CR-DSS - Class Diagram v1.0

skinparam classAttributeIconSize 0

package "Domain Layer" {

  class Applicant {
    - name: str
    - age: int
    - monthly_income: float
    - fixed_costs: float
    - existing_loans: float
    - employment_years: int
  }

  class Loan {
    - principal: float
    - interest_rate: float
    - duration_months: int
  }

  class ScoreResult {
    - total_score: int
    - risk_category: str
    - breakdown: dict
  }
}

package "Service Layer" {

  class AnnuityCalculator {
    + calculate_annuity(loan: Loan): float
    + calculate_total_payment(loan: Loan): float
    + calculate_total_interest(loan: Loan): float
  }

  class ScoringService {
    + calculate_dti(applicant: Applicant, annuity: float): float
    + calculate_household_surplus(applicant: Applicant, annuity: float): float
    + calculate_score(applicant: Applicant, loan: Loan, annuity: float): ScoreResult
    + classify_risk(score: int): str
  }
}

package "Application Layer" {

  class CreditEvaluationService {
    - annuity_calculator: AnnuityCalculator
    - scoring_service: ScoringService
    + evaluate_credit(applicant: Applicant, loan: Loan): ScoreResult
  }
}

package "Utils" {

  class InputValidator {
    + validate_positive_number(value: float): void
    + validate_age(age: int): void
    + validate_interest_rate(rate: float): void
  }
}

CreditEvaluationService --> AnnuityCalculator
CreditEvaluationService --> ScoringService
AnnuityCalculator --> Loan
ScoringService --> Applicant
ScoringService --> Loan
CreditEvaluationService --> ScoreResult

@enduml
